syntax = "proto3";

package product;

option go_package = "github.com/SXerox007/OrderServiceApp/protos/product";


import "google/api/annotations.proto";

message Product {
  string id = 1;
  string name = 2;
  string category = 3;
  double price = 4;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse){
     option (google.api.http) = {
            get: "/v1/product"
		};
  };
}
